# marsrover_2.0

./: .gitignore  GEMINI.md  README.md  compose.sh  launch.sh  nelson_test.sh  sync_git.sh  update.sh  zed_launch.sh
mars_ws/src/aruco_detect/: CMakeLists.txt  package.xml
mars_ws/src/aruco_detect/config/: DetectorParams.yaml
mars_ws/src/aruco_detect/include/: FiducialsNode.hpp
mars_ws/src/aruco_detect/launch/: aruco_detect.launch.py  aruco_detect_launch.py
mars_ws/src/aruco_detect/src/: FiducialsNode.cpp  aruco_detect.cpp
mars_ws/src/aruco_detect/test/: aruco_images_test.cpp  create_markers.py
mars_ws/src/autonomy/: autonomy_gui.ui  package.xml  setup.py
mars_ws/src/autonomy/autonomy/: GPSTools.py  autonomy_gui.py  drive_controller_api.py  dummy_ar_tag_publisher.py  dummy_object_publisher.py  fiducial_data.py  state_machine.py
mars_ws/src/autonomy/launch/: autonomy_launch.py
mars_ws/src/autonomy/params/: autonomy_params.yaml
mars_ws/src/heartbeat/: CMakeLists.txt  README.md  package.xml  setup.py
mars_ws/src/heartbeat/heartbeat/: HeartbeatBase.py  HeartbeatRover.py  parameters.py
mars_ws/src/heartbeat/launch/: heartbeat_base_launch.py  heartbeat_rover_launch.py  test.py
mars_ws/src/mapviz_tf/: package.xml  setup.cfg  setup.py
mars_ws/src/mapviz_tf/launch/: mapviz_launch.py
mars_ws/src/mapviz_tf/mapviz_tf/: click_waypoint.py  gps_to_mapviz.py  lat_lon_meter_convertor.py  path_broadcaster_test.py  path_to_mapviz.py  rover_tf_broadcaster.py
mars_ws/src/mapviz_tf/params/: mapviz_params.yaml
mars_ws/src/mapviz_tf/scripts/: .mapviz_config  cache_byu_map.py  cache_hanksville_map.py  cache_little_moab_map.py  pre-launch.sh  setup_cache.sh  setup_docker.sh  start_server.sh  stop_server.sh
mars_ws/src/navigation/: README.md  package.xml  setup.py
mars_ws/src/navigation/launch/: base_autonomous.launch.py  obstacle_detect_test.launch.py
mars_ws/src/navigation/navigation/: obstacle_detect_node.py
mars_ws/src/navigation/params/: config.yaml
mars_ws/src/odometry/: package.xml  setup.py
mars_ws/src/odometry/config/: estimation.yaml  imu_filter.yaml
mars_ws/src/odometry/launch/: base_launch.py  dummy_singleton_publisher.launch.py  estimation_launch.py  estimation_new_launch.py  imu_filter_launch.py  rover_launch.py
mars_ws/src/odometry/odometry/: dummy_singleton_publisher.py  global_heading_tf_publisher.py  position_velocity_time_translator.py  rover_state_singleton_creator.py  rover_state_singleton_creator_new.py  transform_tools.py
mars_ws/src/rover_msgs/: CMakeLists.txt  package.xml
mars_ws/src/rover_msgs/msg/: AutonomyTaskInfo.msg  Battery.msg  Camera.msg  Clicker.msg  DeviceList.msg  Elevator.msg  Fiducial.msg  FiducialArray.msg  FiducialData.msg  FiducialTransformArray.msg  Gripper.msg  Heartbeat.msg  HeartbeatStatusBase.msg  IWCMotors.msg  MobilityArucoAutopilotCommand.msg  MobilityAutopilotCommand.msg  MobilityDriveCommand.msg  MobilityGPSWaypoint2Follow.msg  MobilityVelocityCommands.msg  NavState.msg  ObjectDetection.msg  ObjectDetections.msg  ObstacleInfo.msg  PointList.msg  RoverState.msg  RoverStateSingleton.msg  ScienceAugerOn.msg  ScienceCacheDoor.msg  ScienceFADIntensity.msg  ScienceSaveNotes.msg  ScienceSaveSecondaryCache.msg  ScienceSaveSensor.msg  ScienceSecondaryCachePosition.msg  ScienceSensorValues.msg  ScienceToolPosition.msg  WaypointNav.msg  ZedObstacles.msg
mars_ws/src/rover_msgs/srv/: AutonomyAbort.srv  AutonomyWaypoint.srv  AutonomyWaypointResponse.srv  CameraControl.srv  CameraControlResponse.srv  OrderAutonomyWaypoint.srv  OrderPath.srv  PlanPath.srv  SetFloat32.srv
mars_ws/src/rover_navigation/: package.xml  setup.py
mars_ws/src/rover_navigation/launch/: aruco_opencv.launch.py  dual_ekf_navsat.launch.py  task_executor.launch.py
mars_ws/src/rover_navigation/rover_navigation/: task_executor.py
mars_ws/src/science/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mars_ws/src/science/launch/: base_launch.py  rover_launch.py
mars_ws/src/science/science/: science_control.py  science_serial_interface.py
ros2_ws/src/nav2_state_machine/: package.xml  setup.cfg  setup.py
ros2_ws/src/nav2_state_machine/config/: comp_waypoints.yaml  gps_wpf_demo.mvc  nav2_no_map_params.yaml
ros2_ws/src/nav2_state_machine/launch/: dual_ekf_navsat.launch.py  gazebo_gps_world.launch.py  mapviz.launch.py  state_machine_sim.launch.py
ros2_ws/src/nav2_state_machine/nav2_state_machine/: state_machine.py
rover_ws/src/UBLOX_read_2/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  package.xml
rover_ws/src/UBLOX_read_2/launch/: base_launch.xml  multi_launch_rover1.xml  rover_launch.xml
rover_ws/src/UBLOX_read_2/msg/: CfgValGetType.msg  Ephemeris.msg  Observation.msg  PosVelEcef.msg  RTCMInput.msg  RelPos.msg  RelPosFlags.msg  SatelliteStatus.msg
rover_ws/src/UBLOX_read_2/params/: ublox.yaml
rover_ws/src/UBLOX_read_2/src/: ublox.cpp
rover_ws/src/UBLOX_read_2/srv/: CfgReset.srv  CfgValSet.srv  GetVersion.srv
rover_ws/src/cougars/coug_bringup/: package.xml  setup.cfg  setup.py
rover_ws/src/cougars/coug_gtsam/: CMakeLists.txt  package.xml
rover_ws/src/rover_bringup/: package.xml  setup.py
rover_ws/src/rover_bringup/config/: waypoints.yaml
rover_ws/src/rover_bringup/launch/: base_autonomy.launch.py  base_delivery.launch.py  base_retrieval.launch.py  base_science.launch.py  base_servicing.launch.py  rover_autonomy.launch.py  rover_common.launch.py  rover_delivery.launch.py  rover_retrieval.launch.py  rover_science.launch.py  rover_servicing.launch.py  rover_startup.launch.py  rover_task_autonomy.launch.py
rover_ws/src/rover_control/: package.xml  setup.py
rover_ws/src/rover_control/config/: control_params.yaml  teleop_twist.yaml
rover_ws/src/rover_control/launch/: mobility.launch.py  peripherals.launch.py  rover_control.launch.py
rover_ws/src/rover_control/rover_control/: drive_mux.py  drive_mux_node.py  (+5 more)
rover_ws/src/rover_gazebo/: package.xml  setup.cfg  setup.py
rover_ws/src/rover_interfaces/: CMakeLists.txt  README.md  package.xml
rover_ws/src/rover_perception/: package.xml  setup.py
(+610 files in other folders)
