<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_navigation</name>
  <version>0.0.0</version>
  <description>Autonomy capabilities (using Nav2) for the Mars Rover</description>
  <maintainer email="snelsondurrant@gmail.com">Nelson Durrant</maintainer>
  <license>MIT</license>

  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>tile_map</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
