<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>science</name>
  <version>0.0.0</version>
  <description>ROS2 packages to run the science module</description>
  <maintainer email="sarah.g.sanderson@gmail.com">Sarah Sanderson</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rover_msgs</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
