<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.0</version>
  <description>Full-system launch files for the Mars Rover</description>
  <maintainer email="snelsondurrant@gmail.com">Nelson Durrant</maintainer>
  <license>Apache-2.0</license>

  <depend>rover_gui</depend>
  <depend>ublox_read_2</depend>
  <depend>joy</depend>
  <depend>nav2_bringup</depend>
  <depend>rover_navigation</depend>
  <depend>rover_localization</depend>
  <depend>rover_perception</depend>
  <depend>rover_gazebo</depend>
  <depend>rover_description</depend>
  <depend>rover_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
