<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation for the Mars Rover</description>
  <maintainer email="snelsondurrant@gmail.com">Nelson Durrant</maintainer>
  <license>Apache-2.0</license>

  <depend>turtlebot3_gazebo</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
