<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_perception</name>
  <version>0.0.0</version>
  <description>Perception capabilities for the Mars Rover</description>
  <maintainer email="snelsondurrant@gmail.com">Nelson Durrant</maintainer>
  <license>Apache-2.0</license>

  <depend>aruco_opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
