<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coug_bringup</name>
  <version>0.0.0</version>
  <description>Full-system launch files for the CougUV</description>
  <maintainer email="snelsondurrant@gmail.com">Nelson Durrant</maintainer>
  <license>Apache-2.0</license>

  <depend>coug_description</depend>
  <depend>coug_localization</depend>
  <depend>rover_gui</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
