<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.2.0</version>
  <description>ZED SDK interface to use custom object detection model.</description>
  <maintainer email="bjz-github@spwiz.com">bradenmeyers</maintainer>
  <license>Apache-2.0</license>
  <author email="phin@zayda.net">Phineas Jensen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_lint_auto</exec_depend>
  <exec_depend>ament_lint_common</exec_depend>

  <depend>rclcpp</depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <!-- Make sure rosidl_default_runtime is included if you're using ROS 2 interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- <build_depend>tensorrt</build_depend>
  <exec_depend>tensorrt</exec_depend> -->
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
